# advanced_ml_2022-2023

./: .gitignore  README.md
pytorch_demo/: CIFAR_test.ipynb  cifar_net.pth  pyproject.toml
