[tool.poetry]
name = "pytorch-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pytorch_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
wheel = "^0.37.1"
torch = "^1.12.1"
numpy = "^1.23.4"
torchvision = "^0.13.1"
pylance = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
